examples/test/testpolicy12571.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12571
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key36: value38
      key44: value1
      key6: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value47
          key27: value12
          key15: value12
      podSelector:
        matchLabels:
          key14: value22
          key15: value15
